19.7 Stable version  (Внесены мелкие фиксы)